--- a/immersion/docker_and_kubernetes/solutions/1_intro_docker.ipynb
+++ b/immersion/docker_and_kubernetes/solutions/1_intro_docker.ipynb
@@ -214,9 +214,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending build context to Docker daemon  81.41kB\n",
+      "Step 1/5 : FROM node:6\n",
+      "6: Pulling from library/node\n",
+      "\n",
+      "\u001b[1B55d5a1d1: Pulling fs layer \n",
+      "\u001b[1B80d00ae9: Pulling fs layer \n",
+      "\u001b[1Bb3117dca: Pulling fs layer \n",
+      "\u001b[1Ba19181b2: Pulling fs layer \n",
+      "\u001b[1B7b2a5bcc: Pulling fs layer \n",
+      "\u001b[1B12c70287: Pulling fs layer \n",
+      "\u001b[1B5386a42d: Pulling fs layer \n",
+      "\u001b[1BDigest: sha256:e133e66ec3bfc98da0440e552f452e5cdf6413319d27a2db3b01ac4b319759b3[4A\u001b[2K\u001b[5A\u001b[2K\u001b[4A\u001b[2K\u001b[5A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[5A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[2A\u001b[2K\u001b[8A\u001b[2K\u001b[2A\u001b[2K\u001b[8A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[8A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[8A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[7A\u001b[2K\u001b[7A\u001b[2K\u001b[7A\u001b[2K\u001b[7A\u001b[2K\u001b[7A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[3A\u001b[2K\u001b[3A\u001b[2K\u001b[2A\u001b[2K\u001b[2A\u001b[2K\u001b[2A\u001b[2K\u001b[2A\u001b[2K\u001b[2A\u001b[2K\u001b[2A\u001b[2K\u001b[2A\u001b[2K\u001b[2A\u001b[2K\u001b[2A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\n",
+      "Status: Downloaded newer image for node:6\n",
+      " ---> ab290b853066\n",
+      "Step 2/5 : WORKDIR /app\n",
+      " ---> Running in 7e999448f158\n",
+      "Removing intermediate container 7e999448f158\n",
+      " ---> fc70975e7942\n",
+      "Step 3/5 : ADD . /app\n",
+      " ---> 97f597025ae3\n",
+      "Step 4/5 : EXPOSE 80\n",
+      " ---> Running in 43acb48d4301\n",
+      "Removing intermediate container 43acb48d4301\n",
+      " ---> 49adb73e4944\n",
+      "Step 5/5 : CMD [\"node\", \"./src/app.js\"]\n",
+      " ---> Running in 3b82bc4f1d95\n",
+      "Removing intermediate container 3b82bc4f1d95\n",
+      " ---> 5b24b247208c\n",
+      "Successfully built 5b24b247208c\n",
+      "Successfully tagged node-app:0.1\n"
+     ]
+    }
+   ],
    "source": [
     "!docker build -t node-app:0.1 -f dockerfiles/intro.docker ."
    ]
@@ -230,9 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REPOSITORY                     TAG       IMAGE ID       CREATED          SIZE\n",
+      "node-app                       0.1       5b24b247208c   12 seconds ago   884MB\n",
+      "hello-world                    latest    d1165f221234   3 months ago     13.3kB\n",
+      "gcr.io/inverting-proxy/agent   <none>    fe507176d0e6   3 months ago     1.73GB\n",
+      "node                           6         ab290b853066   2 years ago      884MB\n"
+     ]
+    }
+   ],
    "source": [
     "!docker images"
    ]
@@ -259,18 +308,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTAINER ID   IMAGE                          COMMAND                  CREATED          STATUS                      PORTS     NAMES\n",
+      "4f71022b9463   hello-world                    \"/hello\"                 2 minutes ago    Exited (0) 2 minutes ago              zen_goodall\n",
+      "5d0057f91808   hello-world                    \"/hello\"                 16 minutes ago   Exited (0) 16 minutes ago             cool_roentgen\n",
+      "166358d3b3ed   gcr.io/inverting-proxy/agent   \"/bin/sh -c '/opt/bi…\"   4 hours ago      Up 4 hours                            proxy-agent\n"
+     ]
+    }
+   ],
    "source": [
     "!docker ps -a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Server running at http://0.0.0.0:80/\n"
+     ]
+    }
+   ],
    "source": [
     "!docker run -p 4000:80 --name my-app node-app:0.1"
    ]
@@ -667,9 +735,9 @@
  ],
  "metadata": {
   "environment": {
-   "name": "tf2-gpu.2-1.m59",
+   "name": "tf2-gpu.2-3.m71",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-1:m59"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-3:m71"
   },
   "kernelspec": {
    "display_name": "Python 3",
@@ -686,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
